--- a/biology/ligation-calculator.html
+++ b/biology/ligation-calculator.html
@@ -569,8 +569,8 @@ Clear all changes
     <div class="similar-calculators-wrap">
       <h2>Similar calculators</h2>
       <div class="similar-calculators">
-        <a href="/agriculture/seed-rate-calculator">Seed Rate Calculator</a>
-        <a href="/health/gfr-calculator">GFR Calculator</a>
+        <a href="/biology/annealing-temperature-calculator">Annealing temperature</a>
+        <a href="/health/gfr-calculator">GFR</a>
 <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
       </div>
     </div>
