--- a/biology/horse-gestation-calculator.html
+++ b/biology/horse-gestation-calculator.html
@@ -243,7 +243,7 @@ Everyday Life
   <button id="share-calculator-btn" class="global-share-btn"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="M680-80q-50 0-85-35t-35-85q0-6 3-28L282-392q-16 15-37 23.5t-45 8.5q-50 0-85-35t-35-85q0-50 35-85t85-35q24 0 45 8.5t37 23.5l281-164q-2-7-2.5-13.5T560-760q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35q-24 0-45-8.5T598-672L317-508q2 7 2.5 13.5t.5 14.5q0 8-.5 14.5T317-452l281 164q16-15 37-23.5t45-8.5q50 0 85 35t35 85q0 50-35 85t-85 35Zm0-80q17 0 28.5-11.5T720-200q0-17-11.5-28.5T680-240q-17 0-28.5 11.5T640-200q0 17 11.5 28.5T680-160ZM200-440q17 0 28.5-11.5T240-480q0-17-11.5-28.5T200-520q-17 0-28.5 11.5T160-480q0 17 11.5 28.5T200-440Zm480-280q17 0 28.5-11.5T720-760q0-17-11.5-28.5T680-800q-17 0-28.5 11.5T640-760q0 17 11.5 28.5T680-720Zm0 520ZM200-480Zm480-280Z"/></svg>Share
 </button>
 <button class="fav-btn" 
-        data-id="conception-calc" 
+        data-id="horse-gestation-calc" 
         data-name="Horse Gestation Calculator" 
         data-label="Add to Favs">
 
@@ -259,19 +259,19 @@ Clear all changes
   <svg height="18" viewBox="0 -960 960 960" width="18" fill="currentColor"><path d="M280-40q-33 0-56.5-23.5T200-120v-720q0-33 23.5-56.5T280-920h280v200H280v480h400v-80h80v200q0 33-23.5 56.5T680-40H280Zm440-360L520-600l56-56 104 104v-288h80v288l104-104 56 56-200 200Z"></path></svg>
 </button>
     </div>
+<div class="similar-calculators-wrap">
+  <h2>Similar animal pregnancy calculators</h2>
+  <div class="similar-calculators">
+    <a href="/biology/dog-pregnancy-calculator">Dog pregnancy</a>
+    <a href="/biology/sheep-gestation-calculator">Sheep gestation</a>
+    <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
+  </div>
+</div>
 
-    <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
-      <div class="similar-calculators">
-        <a href="/health/gfr-calculator">GFR Calculator</a>
-        <a href="/food/coffee-calculator">Coffee Calculator</a>
-        <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
-      </div>
-    </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">Our horse gestation calculator lets you estimate when your horse is likely to give birth.</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
-     
+     Our horse gestation calculator lets you estimate when your horse is likely to give birth.
    </p>
  </article>
   </section>
