--- a/biology/annealing-temperature-calculator.html
+++ b/biology/annealing-temperature-calculator.html
@@ -389,10 +389,8 @@ Clear all changes
 </section>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar biology laboratory Calculators 🔬</h2>
       <div class="similar-calculators">
-        <a href="/physics/bullet-energy-calculator">Bullet energy</a>
-        <a href="/biology/horse-gestation-calculator">Hore gestation</a>
 <a href="/biology/ligation-calculator">Ligation</a>
       </div>
     </div>
