--- a/biology/cat-pregnancy-calculator.html
+++ b/biology/cat-pregnancy-calculator.html
@@ -254,7 +254,7 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar animal pregnancy calculators</h2>
+      <h2>Similar animal pregnancy calculators 🐄🐐</h2>
       <div class="similar-calculators">
         <a href="/biology/dog-pregnancy-calculator">Dog pregnancy</a>
         <a href="/biology/guinea-pig-pregnancy-calculator">Guinea pig pregnancy</a>
