--- a/biology/goat-gestation-calculator.html
+++ b/biology/goat-gestation-calculator.html
@@ -304,7 +304,7 @@ Clear all changes
     </div>
 
   <div class="similar-calculators-wrap">
-      <h2>Similar animal pregnancy calculators</h2>
+      <h2>Similar animal pregnancy calculators 🐄🐐</h2>
       <div class="similar-calculators">
         <a href="/biology/cow-gestation-calculator">Cow gestation</a>
         <a href="/biology/horse-gestation-calculator">Horse gestation</a>
