--- a/biology/ligation-calculator.html
+++ b/biology/ligation-calculator.html
@@ -567,11 +567,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar biology laboratory Calculators 🔬</h2>
       <div class="similar-calculators">
         <a href="/biology/annealing-temperature-calculator">Annealing temperature</a>
-        <a href="/health/gfr-calculator">GFR</a>
-<a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
       </div>
     </div>
 <article class="description-txt">
