--- a/biology/cow-gestation-calculator.html
+++ b/biology/cow-gestation-calculator.html
@@ -327,7 +327,7 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar animal pregnancy calculators</h2>
+      <h2>Similar animal pregnancy calculators 🐄🐐</h2>
       <div class="similar-calculators">
         <a href="/biology/goat-gestation-calculator">Goat gestation</a>
         <a href="/biology/horse-gestation-calculator">Horse gestation</a>
