--- a/biology/dog-pregnancy-calculator.html
+++ b/biology/dog-pregnancy-calculator.html
@@ -251,7 +251,7 @@ Clear all changes
 </button>
     </div>
 <div class="similar-calculators-wrap">
-  <h2>Similar animal pregnancy calculators</h2>
+  <h2>Similar animal pregnancy calculators 🐄🐐</h2>
   <div class="similar-calculators">
     <a href="/biology/cat-pregnancy-calculator">Cat pregnancy</a>
     <a href="/biology/guinea-pig-pregnancy-calculator">Guinea pig pregnancy</a>
