--- a/biology/guinea-pig-pregnancy-calculator.html
+++ b/biology/guinea-pig-pregnancy-calculator.html
@@ -251,7 +251,7 @@ Clear all changes
 </button>
     </div>
 <div class="similar-calculators-wrap">
-  <h2>Similar animal pregnancy calculators</h2>
+  <h2>Similar animal pregnancy calculators 🐄🐐</h2>
   <div class="similar-calculators">
     <a href="/biology/dog-pregnancy-calculator">Dog pregnancy</a>
     <a href="/biology/horse-gestation-calculator">Horse gestation</a>
