--- a/biology/horse-gestation-calculator.html
+++ b/biology/horse-gestation-calculator.html
@@ -260,7 +260,7 @@ Clear all changes
 </button>
     </div>
 <div class="similar-calculators-wrap">
-  <h2>Similar animal pregnancy calculators</h2>
+  <h2>Similar animal pregnancy calculators 🐄🐐</h2>
   <div class="similar-calculators">
     <a href="/biology/dog-pregnancy-calculator">Dog pregnancy</a>
     <a href="/biology/sheep-gestation-calculator">Sheep gestation</a>
