--- a/biology/sheep-gestation-calculator.html
+++ b/biology/sheep-gestation-calculator.html
@@ -253,11 +253,11 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar animal pregnancy calculators 🐄🐐</h2>
       <div class="similar-calculators">
-        <a href="/health/gfr-calculator">GFR Calculator</a>
-        <a href="/food/coffee-calculator">Coffee Calculator</a>
+        <a href="/biology/cow-gestation-calculator">Cow gestation</a>
         <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
+        <a href="/biology/swine-gestation-calculator">Swine gestation</a>
       </div>
     </div>
 <article class="description-txt">
